--- a/A2 site/orderform.html
+++ b/A2 site/orderform.html
@@ -37,7 +37,9 @@
 			<li><a href="announcements.html#events">Event List</a></li>
 			</ul>
 		</li>
-		<li><a href="contactus.html">Contact Us</a></li>
+		<li><a href="contactus.html">Contact Us</a>
+			<ul><li><a href="contactus.html#feedback">Feedback Form</a></li></ul>
+		</li>
 	</ul>
 </nav>
 
@@ -87,7 +89,7 @@
 				  <td><select name="products" id="products" onChange="productType()">
 						<option value="freshwater">Freshwater Fish</option>
 						<option value="saltwater">Saltwater Fish</option>
-						<option value="fishfood">Fish Food</option>
+						<option value="fishfoods">Fish Food</option>
 						<option value="medications">Medications</option>
 						<option value="fishtanks">Fish Tanks</option>
 						<option value="decorations">Decorations</option>
@@ -109,13 +111,13 @@
 						<option value="Angel fish">Angel Fish</option>
 						<option value="Dory fish">Dory Fish</option>
 					</select>
-					<select name="fishfood" id="fishfood" style="display: none" onChange="productPrice()">
+					<select name="fishfoods" id="fishfoods" style="display: none" onChange="productPrice()">
 						<option value="Tropical flakes">Tropical Flakes</option>
 						<option value="Algae wafers">Algae Wafers</option>
 						<option value="Bloodworms">Bloodworms</option>
 					</select>
 					<select name="medications" id="medications" style="display: none" onChange="productPrice()">
-						<option value="Hex shield">Hex Shield 125g</option>
+					  <option value="Hex shield">Hex Shield 125g</option>
 						<option value="Wonder shell">Wonder Shell</option>
 						<option value="General cure">General Cure</option>
 					</select>
