--- a/report.html
+++ b/report.html
@@ -26,18 +26,20 @@
 <p><strong>Members:</strong> Stevanie Huang, Joel Lim</p>
 <h2>GitHub</h2>
 <a href="https://github.com/stevaniehuang/CP1406_Assignment2" target="_blank">GitHub repository</a>
-<p>Please list GitHub usernames with your own names if the usernames are not clearly identifiable.</p>
+<p>Please list GitHub usernames with your own names if the usernames are not clearly identifiable.<br>
+Name - username <br> Stevanie - stevaniehuang <br> Joel Lim - joellimrl</p>
 <h2>Goals</h2>
 <p>The purpose of this website is to introduce both new and existing customers to the new branch of their company (pet shop and landscape/pond classes) and promote their current business of selling fish supplies while increasing sales.</p>
 <h2>Completed Work by Who</h2>
 <p>brief details of who did what</p>
 <ul>
-    <li><strong>Stevanie: </strong> ...</li>
+    <li><strong>Stevanie: </strong> Worked on the design on the looks of the website.</li>
     <li><strong>Joel: </strong> ...</li>
 </ul>
 <h2>Testing Details</h2>
 <p>any details required to test the site, including instructions if needed, outstanding issues
     (like things that look as though they work but don't)</p>
+<p>Throughout the testing we found out that some of our navigation bar is not updated. There are also unappropriate redirect-links which need to be corrected.  </p>
 <h2>References</h2>
 <p>references (links) for any code, images or content that you have used that are not your own</p>
 <ul>
@@ -61,7 +63,7 @@ https://wallpapersafari.com/clown-fish-wallpaper/</li>
 	<li>Members expressed their ideas well so that the design and content were made collaboratively. Each group member listened to the other's opinions.</li>
 	<li>Communication went well. We took turns doing our work in stages as there were parts which required the other member's work and always informed each other when we did it to keep them updated. </li>
 	<li>We helped each other in any issues we are facing on. We took over a task if the other member cannot do it or finish it.</li>
-	<li>We trusted each other well. The work progressed smoothly.</li></ul>
+	<li>We trusted each other well. The work progressed smoothly and we also checked each other's works and correct any little mistakes.</li></ul>
 
  </p>
 <p><strong>Minuses: </strong> <ul> 
@@ -76,6 +78,8 @@ https://wallpapersafari.com/clown-fish-wallpaper/</li>
 <p><strong>Interesting: </strong> (including significant lessons) <ul>
 	<li>Javascript is not that hard to understand.</li>
 	<li>Aesthetic design is extremely important to the success of a website.</li>
+	<li>Creating site from scratch needs a lot of work, but it is fun as we get know to all of our codes.</li>
+	<li>Working in group makes work much easier and improvement can always happen.</li>
 </ul></p>
 </body>
 </html>
