--- a/report.html
+++ b/report.html
@@ -34,12 +34,14 @@ Name - username <br> Stevanie - stevaniehuang <br> Joel Lim - joellimrl</p>
 <p>brief details of who did what</p>
 <ul>
     <li><strong>Stevanie: </strong> Worked on the design on the looks of the website.</li>
-    <li><strong>Joel: </strong> ...</li>
+    <li><strong>Joel: </strong> Did most of javascript and wrote content.</li>
 </ul>
 <h2>Testing Details</h2>
+<img src="user testing 1.jpg" alt="user testing 1"><br><img src="user testing 2.jpg" alt="user testing 2"><br><img src="user testing 3.jpg" alt="user testing 3"><br>
 <p>any details required to test the site, including instructions if needed, outstanding issues
     (like things that look as though they work but don't)</p>
 <p>Throughout the testing we found out that some of our navigation bar is not updated. There are also unappropriate redirect-links which need to be corrected.  </p>
+
 <h2>References</h2>
 <p>references (links) for any code, images or content that you have used that are not your own</p>
 <ul>
@@ -50,7 +52,7 @@ http://1.bp.blogspot.com/-TpspJavELYc/Uo3DIGFCz3I/AAAAAAAAICI/sRIT9EJBdMI/s1600/
 https://images8.alphacoders.com/443/thumb-1920-443242.jpg
 https://artkustiks.files.wordpress.com/2011/04/koi-9x2-oil-on-canvas-120cmx180cm-rp-16-500-000.jpg
 https://wallpapersafari.com/clown-fish-wallpaper/</li>
-	<li>www.google.com for most fish images.</li>
+	<li>www.google.com for most product images.</li>
 
 </ul>
 <h2>PMI</h2>
