update report, look through at css
add more comments in css and delete some unnecessary pictures

--- a/A2 site/aboutus.html
+++ b/A2 site/aboutus.html
@@ -58,7 +58,9 @@
 	<div id="fishtastic">
 	<div class="transparentbg">
 	
-		<div class="box firstblue"><h1>What is Fish-Tastic?!</h1><p>Founded in 2013 by Mr K.H.Chan, the co-sponsor of Singapore Sea Aquarium.</p> </div>
+		<div class="box firstblue"><h1>What is Fish-Tastic?!</h1>
+		  <img src="images/newLogo.png" width="230" height="270" alt="fishtasticlogo"/>
+		  <p>Founded in 2013 by Mr K.H.Chan, the co-sponsor of Singapore Sea Aquarium.</p> </div>
 
 		<div class="box secondblue"><p>FISH~TASTIC sells a variety of fishes with prices ranging from affordable to luxurious. We also carries products such as accessories and fish foods of many well-known brands, <br>such as Hikari, Tropical, and Rio.</p> <p>We have trading partners worldwide, whom we have business dealings with in countries all over the world. We continue to explore and look for trading partners in other parts of the world, so as to acquire more products to develop our farm into a one-stop shopping paradise for all fish lovers.</p></div> 
 
