--- a/A2 site/announcements.html
+++ b/A2 site/announcements.html
@@ -97,7 +97,7 @@
 	</div>
 	
   <div id="events" class="box fourthblue">
-		<h2>Events List <br><img src="images/calender.png" width=" 150" height=" 150" alt="eventsicon"/></h2>
+		<h2>Event List <br><img src="images/calender.png" width=" 150" height=" 150" alt="eventsicon"/></h2>
 		
 			 
 <table align="center">
