--- a/report.html
+++ b/report.html
@@ -33,7 +33,7 @@ Name - username <br> Stevanie - stevaniehuang <br> Joel Lim - joellimrl</p>
 <h2>Completed Work by Who</h2>
 <p>brief details of who did what</p>
 <ul>
-    <li><strong>Stevanie: </strong> Worked on the design on the looks of the website.</li>
+    <li><strong>Stevanie: </strong> Mostly worked on the design as the looks and the flow of the website. Did some parts in content.</li>
     <li><strong>Joel: </strong> Did most of javascript and wrote content.</li>
 </ul>
 <h2>Testing Details</h2>
