--- a/report/report.html
+++ b/report/report.html
@@ -23,7 +23,7 @@
 <body>
 <h1>CP1406 - 2017 Group Project Report</h1>
 <h2>Group Number 6</h2>
-<p><strong>Members:</strong> Stevanie Huang, Joel Lim</p>
+<p><strong>Members:</strong> Stevanie || Joel Lim</p>
 <h2>GitHub</h2>
 <a href="https://github.com/stevaniehuang/CP1406_Assignment2" target="_blank">GitHub repository</a>
 <p>Please list GitHub usernames with your own names if the usernames are not clearly identifiable.<br>
@@ -38,9 +38,10 @@ Name - username <br> Stevanie - stevaniehuang <br> Joel Lim - joellimrl</p>
 </ul>
 <h2>Testing Details</h2>
 <img src="user testing 1.jpg" alt="user testing 1"><br><img src="user testing 2.jpg" alt="user testing 2"><br><img src="user testing 3.jpg" alt="user testing 3"><br>
-<p>any details required to test the site, including instructions if needed, outstanding issues
+<p>The details required to test the site, including instructions if needed, outstanding issues
     (like things that look as though they work but don't)</p>
 <p>Throughout the testing we found out that some of our navigation bar is not updated. There are also unappropriate redirect-links which need to be corrected.  </p>
+
 
 <h2>References</h2>
 <p>references (links) for any code, images or content that you have used that are not your own</p>
@@ -48,11 +49,12 @@ Name - username <br> Stevanie - stevaniehuang <br> Joel Lim - joellimrl</p>
     	<li>http://kieferlandscapinginc.com/water-gardens/koi-ponds (Content)</li>
 	<li>http://www.eastoceansg.com/how-we-deliver (Content)</li>
 	<li>http://wallpapersafari.com/w/F7Umx0/
-http://1.bp.blogspot.com/-TpspJavELYc/Uo3DIGFCz3I/AAAAAAAAICI/sRIT9EJBdMI/s1600/Undersea04.jpg
-https://images8.alphacoders.com/443/thumb-1920-443242.jpg
-https://artkustiks.files.wordpress.com/2011/04/koi-9x2-oil-on-canvas-120cmx180cm-rp-16-500-000.jpg
-https://wallpapersafari.com/clown-fish-wallpaper/</li>
-	<li>www.google.com for most product images.</li>
+	http://1.bp.blogspot.com/-TpspJavELYc/Uo3DIGFCz3I/AAAAAAAAICI/sRIT9EJBdMI/s1600/Undersea04.jpg
+	https://images8.alphacoders.com/443/thumb-1920-443242.jpg
+	https://artkustiks.files.wordpress.com/2011/04/koi-9x2-oil-on-canvas-120cmx180cm-rp-16-500-000.jpg
+	https://wallpapersafari.com/clown-fish-wallpaper/</li>
+	<li>www.google.com for most product images and other images.</li>
+	<li>https://www.behance.net/ceileeend193 - for customized images (like new logo)</li>
 
 </ul>
 <h2>PMI</h2>
